# ffmpegForUnity

./: CMakeLists.txt  README.md  stream2jpeg.cpp
ffserver/: feed1.ffm  ffserver.conf
src/: CMakeLists.txt  __main.cpp  _main.cpp  main.cpp  main_retranslation.cpp  muxing_main.cpp
temp/: decoding_encoding.c  demuxing_decoding.c  example1.cpp  example2.cpp  example3.cpp  filtering_audio.c  filtering_video.c
temp/e1/: Makefile  hello.cpp
