cmake_minimum_required(VERSION 2.8.11)

set(APP_EXECUTABLE_NANE rtsp_video)
project("RTSPVideo")

if(MSVC)
	add_definitions(-D_SECURE_SCL=0)
endif(MSVC)

set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Limited Configs" FORCE)

if(WIN32)
	add_definitions(-DWINDOWS_PLATFORM)
elseif(APPLE )
	add_definitions(-DMACOSX_PLATFORM)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++ ")
	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG -D_DEBUG")
	set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DDEBUG -D_DEBUG")
elseif(UNIX)
	add_definitions(-DLINUX_PLATFORM)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99") 
endif()


if(APPLE)
    # set how it shows up in the Info.plist file
    SET(MACOSX_BUNDLE_INFO_STRING "${APP_EXECUTABLE_NANE}")
    SET(MACOSX_BUNDLE_LONG_VERSION_STRING "1")
    SET(MACOSX_BUNDLE_BUNDLE_NAME "RTSPVideo")
    SET(MACOSX_BUNDLE_BUNDLE_VERSION "1")
endif()

add_subdirectory(src/)


set(CPACK_GENERATOR WIX)
set(CPACK_PACKAGE_NAME "${APP_EXECUTABLE_NANE}")
set(CPACK_PACKAGE_VENDOR "LITS")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "RTSPVide")
set(CPACK_PACKAGE_VERSION "1.0.0")
set(CPACK_PACKAGE_VERSION_MAJOR "1")
set(CPACK_PACKAGE_VERSION_MINOR "0")
set(CPACK_PACKAGE_VERSION_PATCH "0")
set(CPACK_PACKAGE_INSTALL_DIRECTORY "${APP_EXECUTABLE_NANE}")

INCLUDE(CPack)

